# GEqDiff

./: .gitignore  README.md  lego_menu.sh  pyproject.toml  venv_setup.sh
config/common/model/stack_blocks/: common.yaml
config/lego/data/: alpha.yaml  beta.yaml  mixed.yaml
config/lego/experiment/: flow_alpha.yaml  flow_beta.yaml  flow_mixed.yaml
config/lego/model/: flow_interaction.yaml
config/lego/train/: flow.yaml  flow_dipoleonly.yaml  flow_posonly.yaml  flow_shapeonly.yaml
docs/: equivariant_training_inference_guide.md  flow_matching_equations_and_impl.md  lego_sampling_metrics.md
geqdiff/: __init__.py  _version.py
geqdiff/data/: AtomicDataDict.py  _keys.py
geqdiff/nn/: __init__.py  diffusion.py  flow_matching.py  schrodinger_bridge.py  t_embedders.py
geqdiff/scripts/: build_dataset.py  build_diffusion_dataset.py  evaluate_lego_samples.py  inspect_diffusion_dataset.py  inspect_lego_sample_fields.py  ramachandran.py  sample.py  sample_lego.py  sweep_lego_sampling.py
geqdiff/train/: _loss.py
geqdiff/utils/: SDFReader.py  __init__.py  contact_utils.py  diffusion.py  dipole_utils.py  feature_utils.py  noise_schedulers.py  optimal_transport.py  samplers.py
lego/: METRICS.md  README.md  color_rules.py  descriptors.py  lattice.py  lego_blocks.py  lego_engine.py  lego_visualizer.py  role_assignment.py  scaffold_sampling.py  score_utils.py  shape_prototypes.py  utils.py  validation.py
